--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -3,18 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Sidebar</title>
-    <style>
-      label {
-        display: block;
-      }
-      img {
-        display: block;
-        max-width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="http://localhost:1963/main.css" />
   </head>
   <body>
     <div id="content"></div>
-    <script src="main-sidebar.js"></script>
+    <script src="http://localhost:1963/main-sidebar.js"></script>
   </body>
 </html>
